New policy file tools to reduce time taken to update test policy files